--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:build": "tsc -p .",
+    "start:dev": "nodemon --exec ts-node src/index.ts",
+    "start:prod": "tsc -p . && NODE_ENV=prod node dist/index.js"
   },
   "keywords": [],
   "author": "",
