--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start:build": "tsc -p .",
     "start:dev": "nodemon --exec ts-node src/index.ts",
-    "start:prod": "tsc -p . && NODE_ENV=prod node dist/index.js"
+    "start:prod": "tsc -p . && NODE_ENV=prod node dist/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +20,15 @@
     "mysql2": "^3.9.7"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/ip": "^1.1.3",
+    "@types/jest": "^29.5.12",
     "@types/mysql2": "github:types/mysql2",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.6",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
